# utilitiesforme

./: .dockerignore  .gcloudignore  .python-version  Dockerfile  Makefile  copy_static_files.sh  docker-build.sh  docker-run-prod.sh  fly.toml  pyproject.toml  run_dev.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/react/: Home.jsx  Timer.jsx  index.jsx
frontend/react/lib/calculate-duration/: index.js
frontend/react/lib/timer/: index.js
frontend/react/styles/: index.css
utilities_for_me/utilities/_encrypt_decrypt/: encrypt_decrypt.py  test_encrypt_decrypt.py
utilities_for_me/web_app/: server.py
utilities_for_me/web_app/blueprints/app/: bp.py
utilities_for_me/web_app/templates/: index.jinja2.html
