[tool.poetry]
name = "utilities-for-me"
version = "0.1.0"
description = ""
authors = ["Matt Cale <matt.cale@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
pytest = "^8.1.1"
Flask = "^3.0.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
